--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.0",
+    "bootstrap": "^5.1.3",
+    "iransans-fontface": "^0.1.1",
+    "open-sans-fonts": "^1.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.50.0",
+    "typeface-iransans": "^0.0.12",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
